@@ -1,100 +1,18 @@
 #!/usr/bin/make -f
-# debian/rules for the Debian x11proto-core-dev package.
-# Copyright © 2004 Scott James Remnant <scott@netsplit.com>
-# Copyright © 2005 Daniel Stone <daniel@fooishbar.org>
-# Copyright © 2005 David Nusinow <dnusinow@debian.org>
 
-# Uncomment this to turn on verbose mode.
-#export DH_VERBOSE=1
+# Build html and txt only:
+override_dh_auto_configure:
+	dh_auto_configure -- --with-xmlto --without-fop
 
-PACKAGE = x11proto-core-dev
+# Install in debian/tmp to retain control through dh_install:
+override_dh_auto_install:
+	dh_auto_install --destdir=debian/tmp
 
-include debian/xsfbs/xsfbs.mk
-
-CFLAGS = -Wall -g
-ifneq (,$(filter noopt,$(DEB_BUILD_OPTIONS)))
-	CFLAGS += -O0
-else
-	CFLAGS += -O2
-endif
-ifneq (,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
-	NUMJOBS = $(patsubst parallel=%,%,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
-	MAKEFLAGS += -j$(NUMJOBS)
-endif
-
-DEB_HOST_ARCH      ?= $(shell dpkg-architecture -qDEB_HOST_ARCH)
-DEB_HOST_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
-DEB_BUILD_GNU_TYPE ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
-ifeq ($(DEB_BUILD_GNU_TYPE), $(DEB_HOST_GNU_TYPE))
-	confflags += --build=$(DEB_HOST_GNU_TYPE)
-else
-	confflags += --build=$(DEB_BUILD_GNU_TYPE) --host=$(DEB_HOST_GNU_TYPE)
-endif
-
-configure: $(STAMP_DIR)/patch
-	dh_testdir
-	autoreconf -vfi
-
-build: build-stamp
-build-stamp: configure
-	dh_testdir
-	mkdir -p build
-	cd build && \
-	../configure --prefix=/usr --mandir=\$${prefix}/share/man \
-	             --infodir=\$${prefix}/share/info \
-	             --with-xmlto --without-fop \
-	             $(confflags) CFLAGS="$(CFLAGS)" 
-	cd build && $(MAKE)
-	>$@
-
-clean: xsfclean
-	dh_testdir
-	dh_testroot
-	rm -f build-stamp
-
-	rm -f config.cache config.log config.status
-	rm -f */config.cache */config.log */config.status
-	rm -f conftest* */conftest*
-	rm -rf autom4te.cache */autom4te.cache
-	rm -rf build
-	rm -f aclocal.m4 config.guess config.sub configure
-	rm -f do-not-use-config.h.in install-sh missing mkinstalldirs
-	rm -f $$(find -name Makefile.in)
-
-	dh_clean
-
-install: build
-	dh_testdir
-	dh_testroot
-	dh_clean -k
-	dh_installdirs
-
-	cd build && $(MAKE) DESTDIR=$(CURDIR)/debian/tmp install
-
-# Build architecture-independent files here.
-binary-indep: build install
-	dh_testdir
-	dh_testroot
-
-	dh_installdocs
-	dh_installman
+# Forget no-one:
+override_dh_install:
 	find debian/tmp/usr/share/doc/xproto -name '*.xml' -delete
 	find debian/tmp/usr/share/doc/xproto/ -name '*.db' -delete
-	dh_install --sourcedir=debian/tmp --fail-missing
-	dh_installchangelogs ChangeLog
-	dh_link
-	dh_strip
-	dh_compress
-	dh_fixperms
-	dh_installdeb
-	dh_shlibdeps
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
+	dh_install --fail-missing
 
-# Build architecture-dependent files here.
-binary-arch: build install
-# Nothing to do
-
-binary: binary-indep binary-arch
-.PHONY: build clean binary-indep binary-arch binary install
+%:
+	dh $@ --with quilt,autoreconf --builddirectory=build/
